# lvgl_demo

./: .gitmodules  CMakeLists.txt  init.c  init.h  lv_drv_conf.h  lvgl.hpp  lvgl_display_driver.hpp  lvgl_driver.hpp  main.c  main.cpp
config/: lv_conf.h  lv_drv_conf.h
